# claude-account-switcher

./: Cargo.toml  LICENSE  README.md  build-all.sh  quick-release.sh  release.sh
.github/: BUILD.md  SETUP.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  error.rs  main.rs  manager.rs
