[package]
name = "claude-account-switcher"
version = "0.1.0"
edition = "2024"
authors = ["Sulthonuil Adib"]
description = "Manage multiple Claude Code CLI accounts"
license = "MIT"
repository = "https://github.com/sulthonuladib/claude-account-switcher"
homepage = "https://github.com/sulthonuladib/claude-account-switcher"
keywords = ["cli", "claude", "account", "switcher"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
